Added README infos